--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,14 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+.center-box {
+    background-color: #f2f2f2;
+    padding: 0px;
+    margin: 0 auto; /* Center the box horizontally */
+    width: 80%; /* Adjust the width as needed */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
