--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,8 @@
 	margin: 10px;
 } */
 
+
+
 #data_type_images {
 	display: flex;
 	justify-content: center;
@@ -24,12 +26,13 @@
 }
 
 .image-container {
-	width: 40%;
-	margin: 10px;
+	width: 50%;
+	margin: 10px auto;
+	/* margin: 0 auto; */
 }
 
 .image-container img {
-	width: 70%;
+	width: 80%;
 	height: auto;
 }
 
@@ -3211,6 +3214,12 @@ input, select, textarea {
 		}
 
 /* Main */
+
+	#text-wrapper{
+		padding: 0em 0 6em 0 ;
+		width: 70%;
+		margin: 0 auto;
+	}
 
 	#main {
 		padding: 0em 0 6em 0 ;
