--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3221,6 +3221,12 @@ input, select, textarea {
 		margin: 0 auto;
 	}
 
+	@media screen and (max-width: 600px) {
+		#text-wrapper {
+			width: 100%; /* Set width to 100% on screens smaller than 600px */
+		}
+	}
+
 	#main {
 		padding: 0em 0 6em 0 ;
 	}
