changed border radius for image. about me page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2440,7 +2440,7 @@ input, select, textarea {
 
 				.image.left img,
 				.image.right img {
-					border-radius: 0; /* Remove border-radius on mobile if needed */
+					border-radius: 20px; /* Remove border-radius on mobile if needed */
 				}
 
 			}
